- Working on the Alignment issues.

--- a/public/assets/scss/style.scss
+++ b/public/assets/scss/style.scss
@@ -23,3 +23,17 @@ WE WILL RELEASE FUTURE UPDATES SO IN ORDER TO NOT OVERWRITE YOUR STYLES IT'S BET
     }
 }
 
+[class^="feather-b-"], [class*=" feather-b-"] {
+    font-family: 'feather' !important;
+    speak: none;
+    font-style: normal;
+    font-weight: normal;
+    font-variant: normal;
+    text-transform: none;
+    line-height: 1;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+}
+.feather-b-activity:before {
+    content: "\e900";
+}
